--- a/app/src/main/res/layout/dialog_detail_episode.xml
+++ b/app/src/main/res/layout/dialog_detail_episode.xml
@@ -173,6 +173,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                style="@style/TextButtonStyle.Normal"
                 android:text="1" />
 
             <ImageView
