--- a/app/src/main/res/layout/list_item_knowledge_list_text.xml
+++ b/app/src/main/res/layout/list_item_knowledge_list_text.xml
@@ -58,7 +58,8 @@
                 android:id="@+id/listItem_knowledgeList_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:nestedScrollingEnabled="false" />
         </TableRow>
 
     </TableLayout>
