--- a/app/src/main/res/layout/dialog_advanced_search_video.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_video.xml
@@ -115,14 +115,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/dialog_advancedSearch_video_viewed_text"
+                android:id="@+id/dialog_advancedSearch_video_dateRange_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 tools:text="04.10.2020 - 12.01.2021" />
 
             <Button
-                android:id="@+id/dialog_advancedSearch_video_viewed_change"
+                android:id="@+id/dialog_advancedSearch_video_dateRange_change"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -158,7 +158,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Vor"
-                        android:inputType="number"
+                        android:inputType="numberSigned"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -189,7 +189,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Dauer"
-                        android:inputType="number"
+                        android:inputType="numberSigned"
                         android:singleLine="true" />
                 </com.google.android.material.textfield.TextInputLayout>
 
