--- a/app/src/main/res/layout/dialog_video_internet.xml
+++ b/app/src/main/res/layout/dialog_video_internet.xml
@@ -57,11 +57,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:hint="URL oder Google"
-            app:errorEnabled="true"
+            app:errorEnabled="false"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/dialog_videoInternet_goButton"
             app:layout_constraintStart_toEndOf="@+id/dialog_videoInternet_close"
             app:layout_constraintTop_toTopOf="parent">
