--- a/app/src/main/res/layout/activity_catigories.xml
+++ b/app/src/main/res/layout/activity_catigories.xml
@@ -91,6 +91,8 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingHorizontal="2dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
