AdvancedSearchDialog zu CategoriesActivity hinzugefügt

--- a/app/src/main/res/layout/dialog_advanced_search_video.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_video.xml
@@ -20,14 +20,31 @@
         android:orientation="vertical">
 
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/dialog_advancedSearch_video_negationLayout_rating"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="8dp"
-            android:text="Bewertung"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextButtonStyle.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Bewertung"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Negiert"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -90,24 +107,40 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginVertical="12dp"
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
         android:orientation="vertical">
 
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/dialog_advancedSearch_video_negationLayout_dateRangeOrDuration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Ansichtszeiten"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextButtonStyle.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Ansichtszeiten"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Negiert"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -209,26 +242,42 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginVertical="12dp"
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/dialog_advancedSearch_video_negationLayout_length"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp"
-            android:text="Länge"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextButtonStyle.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:text="Länge"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Negiert"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -276,22 +325,25 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginVertical="12dp"
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_weight="1"
             android:text="Kategorien"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -417,43 +469,58 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginVertical="8dp"
+        android:layout_marginVertical="12dp"
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/dialog_advancedSearch_video_negationLayout_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp"
-            android:text="Name"
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dialog_advancedSearch_video_name_layout"
+            <TextView
+                style="@style/TextButtonStyle.Primary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_marginStart="4dp"
+                android:layout_weight="1"
+                android:text="Name"
+                android:textStyle="bold" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dialog_advancedSearch_video_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Nur im Namen suchen"
-                    android:inputType="textCapSentences"
-                    android:singleLine="true" />
-            </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Negiert"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:visibility="visible" />
+        </LinearLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dialog_advancedSearch_video_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/dialog_advancedSearch_video_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nur im Namen suchen"
+                android:inputType="textCapSentences"
+                android:singleLine="true" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
     </LinearLayout>
