CollectionActivity recycler layout reworked PopupMenu bug fixed

--- a/app/src/main/res/layout/dialog_advanced_search_category.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_category.xml
@@ -162,12 +162,12 @@
                     android:layout_weight="1"
                     tools:text="04.10.2020 - 12.01.2021" />
 
-                <Button
-                    android:id="@+id/dialog_advancedSearch_category_dateRange_change"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Auswählen" />
+<!--                <Button-->
+<!--                    android:id="@+id/dialog_advancedSearch_category_dateRange_change"-->
+<!--                    style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Auswählen" />-->
             </LinearLayout>
 
             <View
