--- a/app/src/main/res/layout/dialog_advanced_search_category.xml
+++ b/app/src/main/res/layout/dialog_advanced_search_category.xml
@@ -275,7 +275,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_weight="1"
-                android:text="Länge"
+                android:text="Count"
                 android:textStyle="bold" />
 
             <TextView
