--- a/app/src/main/res/layout/dialog_detail_knowledge.xml
+++ b/app/src/main/res/layout/dialog_detail_knowledge.xml
@@ -180,7 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:text="Bewerting:"
+                android:text="Bewertung:"
                 android:textStyle="bold" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
