--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -208,7 +208,7 @@
                 android:clickable="true"
                 android:foreground="@drawable/ripple"
                 android:padding="5dp"
-                app:srcCompat="@drawable/ic_kallendar_grey" />
+                app:srcCompat="@drawable/ic_calendar_grey" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
@@ -329,7 +329,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:text="Bewerting:"
+                android:text="Bewertung:"
                 android:textStyle="bold" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
