--- a/app/src/main/res/layout/dialog_edit_or_add_joke.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_joke.xml
@@ -149,7 +149,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bewerting:"
+                android:text="Bewertung:"
                 android:textStyle="bold" />
 
             <FrameLayout
