--- a/app/src/main/res/layout/dialog_edit_or_add_owe.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_owe.xml
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:text="Eigan/Fremd:"
+                android:text="Eigen/Fremd:"
                 android:textStyle="bold" />
 
             <Spinner
