--- a/app/src/main/res/layout/main_fragment_videos.xml
+++ b/app/src/main/res/layout/main_fragment_videos.xml
@@ -463,18 +463,64 @@
                 </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
                 <com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout
+                    android:id="@+id/main_watchList_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/tile_background"
-                    android:clickable="true"
-                    android:elevation="3dp"
-                    android:foreground="@drawable/ripple"
                     android:gravity="center"
-                    android:onClick="showLaterMenu"
-                    android:orientation="vertical"
-                    android:visibility="invisible"/>
+                    android:orientation="vertical">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:background="@drawable/tile_background"
+                        android:layout_width="match_parent"
+                        android:foreground="@drawable/ripple"
+                        android:layout_margin="8dp"
+                        android:clickable="true"
+                        android:onClick="openWatchListActivity"
+                        android:elevation="3dp"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:alpha="0.075"
+                            android:src="@drawable/ic_watch_list"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="8dp"
+                                android:text="WatchList"
+                                android:textSize="24sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/main_watchListCount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="–" />
+                        </LinearLayout>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
 
             </LinearLayout>
 <!--        </LinearLayout>-->
