--- a/app/src/main/res/layout/list_item_url_parser.xml
+++ b/app/src/main/res/layout/list_item_url_parser.xml
@@ -98,7 +98,7 @@
             style="@style/ImageButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             app:srcCompat="@drawable/ic_delete" />
     </LinearLayout>
 </FrameLayout>
