--- a/app/src/main/res/layout/dialog_detail_custom_code.xml
+++ b/app/src/main/res/layout/dialog_detail_custom_code.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/dialog_detail_customCode_parameter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Parameter"
+                android:hint="Parameter (csv)"
                 android:inputType="textCapSentences"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -45,9 +45,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:tint="@color/colorGreen"
             android:layout_marginTop="4dp"
-            app:srcCompat="@drawable/ic_play_arrow" />
+            app:srcCompat="@drawable/ic_play_arrow"
+            app:tint="@color/colorGreen" />
 
     </LinearLayout>
 
