--- a/app/src/main/res/layout/dialog_edit_custom_code.xml
+++ b/app/src/main/res/layout/dialog_edit_custom_code.xml
@@ -56,7 +56,7 @@
             android:id="@+id/dialog_edit_CustomCodeVideo_params"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Test Parameter"
+            android:hint="Test Parameter (csv)"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,6 +84,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             android:text="ReturnType:" />
 
         <Spinner
