--- a/app/src/main/res/layout/dialog_edit_custom_code.xml
+++ b/app/src/main/res/layout/dialog_edit_custom_code.xml
@@ -73,7 +73,7 @@
             android:hint="JavaScript-Code"
             android:inputType="textMultiLine"
             android:singleLine="false"
-            tools:text="das\nist\nein\ntest" />
+            tools:text="das\nist\nein\ntest!" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
