--- a/app/src/main/res/layout/help_custom_code_video.xml
+++ b/app/src/main/res/layout/help_custom_code_video.xml
@@ -92,6 +92,59 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="getAllCat(category)"
+                    android:textStyle="bold" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Returned ein Objekt, welches die vollständige Kategorie darstellt"
+                    android:textSize="12sp"
+                    android:typeface="serif"
+                    tools:maxLines="100" />
+
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="3dp"
+                            android:text="category:"
+                            android:textSize="12sp"
+                            android:textStyle="italic" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Die Kategorie, die zurückgegeben werden soll"
+                            android:textSize="12sp" />
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginVertical="5dp"
+                android:background="?android:attr/listDivider" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="getById(id)"
                     android:textStyle="bold" />
 
@@ -292,7 +345,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="#b# (bold), #u# (underline), #i# (italic), #s# (strike-through), #0x#... (color), #nh# (not highlighted), #h# (highlighted)\n(Als String getrennt durch '|')"
+                            android:text="#b# (bold), #u# (underline), #i# (italic), #s# (strike-through), #0x#... (color) #e#... (ellipse fixed length), #nh# (not highlighted), #h# (highlighted)\n(Als String getrennt durch '|')"
                             android:textSize="12sp" />
                     </TableRow>
                 </TableLayout>
@@ -366,7 +419,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="#b# (bold), #u# (underline), #i# (italic), #s# (strike-through), #0x#... (color), #nh# (not highlighted), #h# (highlighted)\n(Als String getrennt durch '|')"
+                            android:text="#b# (bold), #u# (underline), #i# (italic), #s# (strike-through), #0x#... (color) #e#... (ellipse fixed length), #nh# (not highlighted), #h# (highlighted)\n(Als String getrennt durch '|')"
                             android:textSize="12sp" />
                     </TableRow>
                 </TableLayout>
