--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -58,6 +58,14 @@
             android:layout_marginVertical="2dp"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/listItem_video_extraText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Extra Text"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
